Fix display bug on mobile devices landscape orientation

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -20,10 +20,9 @@ body {
 }
 
 #intro-subtext {
-    display: inline-block !important;
     overflow: hidden;
     white-space: nowrap;
-    letter-spacing: .15em;
+    letter-spacing: .11em;
     animation: typing 4.5s steps(40, end);
 }
 
@@ -170,7 +169,7 @@ body {
         font-size: 4rem;
     }
     #intro-subtext {
-        font-size: 2.5rem;
+        font-size: 1.5rem;
     }
     #projects .card {
         width: 35rem;
